# RPIMobileStudioDesktop

./: .gitignore  AUTHORS  README
IOBoard_Linux/: Makefile  open_board.c
demos/oscilloscope/: build.sh  osc.c
doc/: RED2_AnalogStream_SampleRates.txt
rpims_v2/: AnalogStream.c  AnalogStream.h  DigitalIO.c  DigitalIO.h  Features.h  FuncGen.h  IOBoard.c  IOBoard.h  IOBoard_libusb.c  Makefile.am  configure.ac  objtest.c  test.c
rpims_v2/RED2/: RED2_AnalogStream.c
